// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RadioButton component Should renders active RadioButton correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#0FA858",
      "borderRadius": 10,
      "borderStyle": "solid",
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "marginBottom": 10,
      "marginLeft": 3,
      "marginRight": 3,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#0FA858",
        },
        Object {
          "fontFamily": "Lexend-Regular",
          "fontSize": 15,
        },
      ]
    }
  >
    Every Day
  </Text>
</View>
`;

exports[`Test RadioButton component Should renders inactive RadioButton correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#848484",
      "borderRadius": 10,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "marginBottom": 10,
      "marginLeft": 3,
      "marginRight": 3,
      "marginTop": 10,
      "opacity": 1,
      "overflow": "hidden",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#848484",
        },
        Object {
          "fontFamily": "Lexend-Regular",
          "fontSize": 15,
        },
      ]
    }
  >
    Every Day
  </Text>
</View>
`;
